@@ -1,3 +1,9 @@
+2012-08-11 Srecko Morovic <srecko.morovic@cern.ch>
+
+	* V01-12-04
+	* if event received with late LS, throw framework exception
+	  (will not go into infinite counting loop)
+
 2012-07-07 Srecko Morovic <srecko.morovic@cern.ch>
 
 	* V01-12-02
